# Agent-Harness

./: .env.example  CLAUDE.md  INFORME-PROYECTO.md  README.md  pyproject.toml
agente/: .env.example  .gitignore  README.md  pyproject.toml
agente/src/agente/: __init__.py  __main__.py  errors.py
agente/src/agente/config/: __init__.py  settings.py
agente/src/agente/core/: orchestrator.py  types.py
agente/src/agente/infra/: __init__.py  minimax_client.py
agente/src/agente/infra/memory/: __init__.py
agente/src/agente/infra/tools/: __init__.py  filesystem.py  registry.py  web_search.py
agente/src/agente/interfaces/: __init__.py  streamlit_app.py  tui_app.py
agente/src/agente/observability/: __init__.py
agente/src/agente/ports/: llm_client.py  memory.py
agente/src/agente/service/: __init__.py  agent_service.py
agente/src/factory/: builder.py
agente/tests/: test_minimax_client.py  test_tools.py  test_tui.py
src/agente/config/: settings.py
src/agente/core/: __init__.py  orchestrator.py  planner.py  prompts.py  session.py
src/agente/infra/: minimax_client.py
src/agente/infra/memory/: in_memory.py
src/agente/infra/tools/: __init__.py  browser.py  calculator.py  filesystem.py  scraper.py
src/agente/infra/tools/claude_code/: __init__.py  backend.py  sanitize.py  sdk_backend.py  tool.py
src/agente/observability/: logging.py
src/agente/ports/: __init__.py  llm_client.py  tool.py
src/agente/service/: agent_service.py
src/factory/: __init__.py  builder.py
src/interfaces/: __init__.py  __main__.py  cli.py  commands.py  tui_app.py  tui_app.tcss  tui_theme.py  tui_widgets.py
tests/: conftest.py  test_browser.py  test_commands.py  test_factory.py  test_memory.py  test_minimax_client.py  test_orchestrator.py  test_scraper.py  test_tools.py  test_tui.py
