[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agente"
version = "0.1.0"
description = "Núcleo de un agente orquestador de IA sobre MiniMax (arquitectura hexagonal)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "tenacity>=8.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
ui = [
    "textual[syntax]>=0.86",
]
browser = [
    "playwright>=1.40",
]
code = [
    "claude-agent-sdk>=0.1",
]

[project.scripts]
agente = "interfaces.cli:main"
agente-tui = "interfaces.tui_app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agente", "src/factory", "src/interfaces"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
